--- a/L6/gcp-5-assertions.ipynb
+++ b/L6/gcp-5-assertions.ipynb
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A wind speed of 9 km/hr is 2.5 m/s.\n"
+     ]
+    }
+   ],
    "source": [
     "def convert_kph_ms(speed):\n",
     "    \"\"\"Converts velocity (speed) in km/hr to m/s\"\"\"\n",
@@ -49,13 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A wind speed of 9 km/hr is 2.5 m/s.\n"
+     ]
+    }
+   ],
    "source": [
     "def convert_kph_ms(speed):\n",
     "    \"\"\"Converts velocity (speed) in km/hr to m/s\"\"\"\n",
@@ -78,13 +94,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\gcp-5-assertions.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m wind_speed_km \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m27\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m wind_speed_ms \u001b[39m=\u001b[39m convert_kph_ms(wind_speed_km)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mA wind speed of \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_km\u001b[39m}\u001b[39;00m\u001b[39m km/hr is \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_ms\u001b[39m}\u001b[39;00m\u001b[39m m/s.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\gcp-5-assertions.ipynb Cell 6\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconvert_kph_ms\u001b[39m(speed):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Converts velocity (speed) in km/hr to m/s\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39massert\u001b[39;00m speed \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m speed \u001b[39m*\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3600\u001b[39m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "wind_speed_km = -27\n",
     "wind_speed_ms = convert_kph_ms(wind_speed_km)\n",
@@ -152,13 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Wind speed values must be numbers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\gcp-5-assertions.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m speed \u001b[39m*\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3600\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m wind_speed_km \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mdog\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m wind_speed_ms \u001b[39m=\u001b[39m convert_kph_ms(wind_speed_km)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mA wind speed of \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_km\u001b[39m}\u001b[39;00m\u001b[39m km/hr is \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_ms\u001b[39m}\u001b[39;00m\u001b[39m m/s.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\gcp-5-assertions.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconvert_kph_ms\u001b[39m(speed):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Converts velocity (speed) in km/hr to m/s\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39massert\u001b[39;00m (\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         \u001b[39mtype\u001b[39m(speed) \u001b[39m==\u001b[39m \u001b[39mint\u001b[39m \u001b[39mor\u001b[39;00m \u001b[39mtype\u001b[39m(speed) \u001b[39m==\u001b[39m \u001b[39mfloat\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     ), \u001b[39m\"\u001b[39m\u001b[39mWind speed values must be numbers\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39massert\u001b[39;00m speed \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mWind speed values must be positive or zero\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m speed \u001b[39m*\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3600\u001b[39m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Wind speed values must be numbers"
+     ]
+    }
+   ],
    "source": [
     "def convert_kph_ms(speed):\n",
     "    \"\"\"Converts velocity (speed) in km/hr to m/s\"\"\"\n",
@@ -195,13 +237,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\gcp-5-assertions.ipynb Cell 14\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m speed \u001b[39m*\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3600\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m wind_speed_km \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m409\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m wind_speed_ms \u001b[39m=\u001b[39m convert_kph_ms(wind_speed_km)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mA wind speed of \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_km\u001b[39m}\u001b[39;00m\u001b[39m km/hr is \u001b[39m\u001b[39m{\u001b[39;00mwind_speed_ms\u001b[39m}\u001b[39;00m\u001b[39m m/s.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32md:\\WORK\\ONLINE COURSES\\GEOPYTHON\\geopython_notebooks\\L6\\gcp-5-assertions.ipynb Cell 14\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconvert_kph_ms\u001b[39m(speed):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Converts velocity (speed) in km/hr to m/s\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39massert\u001b[39;00m speed \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m0.0\u001b[39;49m, \u001b[39m\"\u001b[39m\u001b[39mWind speed values must be positive or zero\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39massert\u001b[39;00m speed \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m408.0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mWind speed exceeds fastest winds ever measured\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WORK/ONLINE%20COURSES/GEOPYTHON/geopython_notebooks/L6/gcp-5-assertions.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m speed \u001b[39m*\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m/\u001b[39m \u001b[39m3600\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'float'"
+     ]
+    }
+   ],
    "source": [
     "def convert_kph_ms(speed):\n",
     "    \"\"\"Converts velocity (speed) in km/hr to m/s\"\"\"\n",
@@ -257,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
